# scanner

./: .gitignore  .travis.yml  LICENSE  Pipfile  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
back/: .gitignore  Pipfile  manage.py  requirements.txt
back/fi_scanner_back/: car_normalisation.csv  cars.csv  metrics.py  settings.py  urls.py  wsgi.py
back/registrations/: admin.py  models.py  serializers.py  tests.py  utils.py  views.py  viewsets.py
back/registrations/actions/: codes.py  emails.py  scans.py  tables.py  tickets.py
back/registrations/migrations/: 0001_initial.py  0002_auto_20171121_1419.py  0002_auto_20180816_1225.py  0002_event.py  0003_auto_20171121_1507.py  0003_auto_20180816_1225.py  0004_auto_20171121_1510.py  0004_auto_20181205_1602.py  0005_auto_20171121_1711.py  0005_ticketcategory_import_key.py  0006_auto_20171121_1936.py  0006_auto_20190822_0820.py  (+16 more)
front/: package-lock.json  package.json
front/public/: index.html  instascan.min.js  manifest.json
front/src/: App.css  App.js  Container.js  Scanner.js  Start.js  Ticket.js  Wait.js  config.js  index.css  index.js  labels.js  utils.js
registrations/: admin.py  models.py  router.py  serializers.py  tests.py  views.py  viewsets.py
registrations/actions/: codes.py  emails.py  scans.py  tickets.py
registrations/migrations/: 0001_initial.py  0002_auto_20180816_1225.py  0003_auto_20180816_1225.py  0007_scanpoint.py  0008_auto_20200723_1221.py  0009_auto_20200724_1246.py  0010_auto_20200814_1419.py  0011_i18n.py  0012_registration_canceled.py  0013_ticketattachment.py  0014_auto_20220819_1919.py  0015_ticketevent_google_wallet_class_id.py  0016_fix_wallet_token.py  0017_ticketevent_end_date_ticketevent_start_date_and_more.py  0018_registration_apple_wallet_pass.py  0019_ticketevent_location_name.py  0020_ticketevent_wallet_logo.py  0021_ticketevent_wallet_strip.py
scanner/: settings.py  urls.py  wsgi.py
(+13 files in other folders)
