[tool.poetry]
name = "scanner"
version = "0.1.0"
description = ""
authors = ["Salomé Cheysson <salome@cheysson.fr>"]

[tool.poetry.dependencies]
python = "^3.12"
dj-email-url = "^1.0.6"
django = "^4.2"
django-cors-headers = "^4.7.0"
pillow = "^10.4.0"
pytz = "*"
qrcode = "^8.2"
tqdm = "*"
prometheus-client = "*"
"html2text" = "*"
requests = "*"
cysystemd = "*"
djangorestframework = "*"
django-filter = "*"


[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
