[tool.poetry]
name = "scanner"
version = "0.1.0"
description = ""
authors = ["Salomé Cheysson <salome@cheysson.fr>"]

[tool.poetry.dependencies]
python = "^3.12"
dj-email-url = "^1.0.6"
django = "^4.2"
django-cors-headers = "^4.7.0"
pillow = "^10.4.0"
pytz = "*"
qrcode = "^8.2"
tqdm = "*"
prometheus-client = "*"
"html2text" = "*"
requests = "*"
cysystemd = "*"
djangorestframework = "*"
django-filter = "*"
google-auth = "^2.40.3"
google-api-python-client = "^2.177.0"
pyjwt = "^2.10.1"
cryptography = "^45.0.5"
pyopenssl = "^25.1.0"
icalendar = "^6.3.1"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
